--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
-.First.js
-.Login.js
-.NavTest.js
-.Second.js
-.Third.js
-.third.css
-.Fourth.js
+First.js
+Login.js
+NavTest.js
+Second.js
+Third.js
+third.css
+Fourth.js
+package-lock.json
 
 .
 # testing
